<resources>
    <string name="app_name">淘不锈</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="forget_password"><u>忘记密码</u></string>
    <string name="new_user_register"><u>新用户注册</u></string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="mobile_title">手机号</string>
    <string name="pass_title">密码</string>

    <string name="register_mobile_title">请输入手机号</string>
    <string name="register_pass_title">请输入密码</string>
    <string name="verify_code_title">请输入验证码</string>
    <string name="user_doc_title">同意用户协议</string>

    <string name="get_verify_code">获取验证码</string>
    <string name="get_verify_code_started">获取中...</string>
    <string name="get_verify_code_desc">%1$s后重新获取</string>

    <string name="title_activity_reset_password">忘记密码</string>
    <string name="msg_code_title">验证码</string>
    <string name="pass_hint">6~20位字符</string>
    <string name="new_pass_title">新密码</string>
    <string name="reset_password_notice">请获取短信验证码，并设置新的登陆密码</string>

    <string name="buy_doing_tab">进行中(%1$s)</string>
    <string name="buy_done_tab">已完成(%1$s)</string>
    <string name="buy_out_tab">已过期(%1$s)</string>

    <string name="buy_item_message">备注：%1$s</string>
    <string name="buy_item_time_limit">求购期限：%1$s</string>
    <string name="buy_item_time_done">成交时间：%1$s</string>
    <string name="qt_item_time_apply">申请时间：%1$s</string>
    <string name="qt_item_time_done">完成时间：%1$s</string>

    <string name="buy_detail_salesman">跟进专员：%1$s</string>
    <string name="buy_detail_buy_num">求购单号：%1$s</string>
    <string name="buy_detail_supply_count">%1$s家已报价</string>
    <string name="buy_detail_buy_company">买家公司名：%1$s</string>
    <string name="buy_detail_buy_contact">买家联系人：%1$s</string>
    <string name="buy_detail_info">卖家中标次数：%1$s次  联系人：%2$s</string>

    <!-- XListView -->
    <string name="xlist_view_hint_loading">正在加载</string>
    <string name="xlist_view_footer_hint_normal">点击查看更多</string>
    <string name="xlist_view_footer_hint_ready">松开载入更多</string>
    <string name="xlist_view_footer_hint_loading">正在加载更多</string>
    <string name="title_activity_edit_buy">EditBuyActivity</string>

    <string name="qt_item_id">订单号：%1$s</string>

    <string name="offer_doing_tab">我来报价(%1$s)</string>
    <string name="offer_waiting_tab">等待中(%1$s)</string>
    <string name="offer_win_tab">已中标(%1$s)</string>
    <string name="offer_lose_tab">未中标(%1$s)</string>
    <string name="title_activity_offer_detail">OfferDetailActivity</string>

    <string name="offer_detail_type">品类： %1$s</string>
    <string name="offer_detail_surface">表面： %1$s</string>
    <string name="offer_detail_material">材质： %1$s</string>
    <string name="offer_detail_pro_place">产地： %1$s</string>
    <string name="offer_detail_locate_place">收货城市： %1$s</string>
    <string name="offer_detail_info">规格： %1$s</string>
    <string name="offer_detail_tolerate">公差： %1$s</string>
    <string name="offer_detail_message">备注： %1$s</string>
    <string name="offer_detail_numbers">数量： %1$s</string>

    <string name="offer_detail_buy_times">求购总次数：%1$s</string>
    <string name="offer_detail_buy_rate">求购成功率：%1$s</string>
    <string name="offer_detail_my_price">报价：%1$s</string>
    <string name="offer_detail_my_message">备注：%1$s</string>
    <string name="offer_detail_total_money">总成交额：%1$s元</string>
    <string name="title_activity_my_subscribe">MySubscribeActivity</string>


    <string name="sales_user_locate">所在地：%1$s</string>
    <string name="title_activity_sales_buy_detail">SalesBuyDetailActivity</string>
    <string name="title_activity_sales_buy">SalesBuyActivity</string>
    <string name="title_activity_guidance">GuidanceActivity</string>
    <string name="title_activity_my_history">MyHistoryActivity</string>
    <string name="title_activity_qt_desc">QtDescActivity</string>


    <string name="setting_switch_app">切换至淘不锈App</string>
    <string name="setting_switch_sales">切换至专员App</string>


    <string name="find_car_doing_tab">正在找车(%1$s)</string>
    <string name="find_car_done_tab">已成交(%1$s)</string>
    <string name="find_car_out_tab">已过期(%1$s)</string>
</resources>
