<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_content_bg"
    tools:context="com.onefengma.taobuxiu.views.auth.ResetPasswordActivity">

    <com.onefengma.taobuxiu.views.widgets.ToolBar
        app:tool_bar_title="@string/title_activity_reset_password"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:padding="16dip"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/reset_password_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="16dip"
            android:background="@color/main_content_bg"
            android:layout_height="1dip" />
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/mobile_title"
                android:layout_width="80dip"
                android:textSize="16dip"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="0dip"
                android:inputType="number"
                android:layout_weight="1"
                android:id="@+id/mobile"
                android:background="@null"
                android:textSize="16dip"
                android:hint="请输入您的绑定手机号"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="16dip"
            android:background="@color/main_content_bg"
            android:layout_height="1dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/msg_code_title"
                android:layout_width="80dip"
                android:textSize="16dip"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="0dip"
                android:layout_weight="1"
                android:id="@+id/msgCode"
                android:background="@null"
                android:textSize="16dip"
                android:layout_height="wrap_content" />

            <com.onefengma.taobuxiu.views.widgets.CountDownTextView
                android:text="@string/get_verify_code"
                android:background="@drawable/get_verify_code_bg"
                android:paddingLeft="10dip"
                android:paddingBottom="5dip"
                android:paddingTop="5dip"
                android:id="@+id/verify_code_counter"
                android:clickable="true"
                android:paddingRight="10dip"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="8dip"
            android:layout_marginBottom="16dip"
            android:background="@color/main_content_bg"
            android:layout_height="1dip" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/new_pass_title"
                android:layout_width="80dip"
                android:textSize="16dip"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="0dip"
                android:layout_weight="1"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:background="@null"
                android:textSize="16dip"
                android:hint="@string/pass_hint"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:text="确认更改"
        android:layout_margin="10dip"
        android:gravity="center"
        android:textColor="@color/white"
        android:padding="10dip"
        android:background="@drawable/get_verify_code_bg"
        android:clickable="true"
        android:layout_height="wrap_content" />

</LinearLayout>
