<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/login_bg"
    tools:context="com.onefengma.taobuxiu.views.LoginActivity">

    <com.onefengma.taobuxiu.views.widgets.ToolBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        app:tool_bar_title="@string/register"
        android:background="@android:color/transparent"
        android:layout_height="@dimen/tool_bar_height" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="40dip"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_height="40dip">

        <ImageView
            android:id="@+id/login_icon"
            android:src="@drawable/ic_main_tab_chat"
            android:layout_alignParentLeft="true"
            android:layout_width="30dip"
            android:layout_height="40dip" />

        <EditText
            android:id="@+id/mobile"
            android:inputType="number"
            android:textSize="16dip"
            android:layout_marginLeft="5dip"
            android:hint="@string/register_mobile_title"
            android:background="@android:color/transparent"
            android:layout_toRightOf="@id/login_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <View
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@color/login_line"
            android:layout_height="1px" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="18dip"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_height="40dip">

        <ImageView
            android:id="@+id/verify_icon"
            android:src="@drawable/ic_main_tab_chat"
            android:layout_alignParentLeft="true"
            android:layout_width="30dip"
            android:layout_height="40dip" />

        <EditText
            android:id="@+id/verify"
            android:inputType="number"
            android:layout_marginLeft="5dip"
            android:textSize="16dip"
            android:hint="@string/verify_code_title"
            android:layout_toLeftOf="@+id/line"
            android:background="@android:color/transparent"
            android:layout_toRightOf="@id/verify_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <View
            android:id="@id/line"
            android:layout_width="1px"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/verify_code_counter"
            android:layout_height="30dip"
            android:background="@color/login_line" />

        <com.onefengma.taobuxiu.views.widgets.CountDownTextView
            android:id="@+id/verify_code_counter"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/get_verify_code"
            android:gravity="center"
            android:clickable="true"
            style="@style/Widget.AppCompat.ActionButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <View
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@color/login_line"
            android:layout_height="1px" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="18dip"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_height="40dip">

        <ImageView
            android:id="@+id/password_icon"
            android:src="@drawable/ic_main_tab_chat"
            android:layout_alignParentLeft="true"
            android:layout_width="30dip"
            android:layout_height="39dip" />

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_marginLeft="5dip"
            android:textSize="16dip"
            android:hint="@string/register_pass_title"
            android:background="@android:color/transparent"
            android:layout_toRightOf="@id/password_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <View
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:background="@color/login_line"
            android:layout_height="1px" />

    </RelativeLayout>

    <CheckBox
        android:layout_marginTop="15dip"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:padding="8dip"
        android:text="@string/user_doc_title"
        android:layout_gravity="left"
        android:buttonTint="@color/login_btn_border"
        android:paddingLeft="5dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/register"
        android:text="@string/register"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:textSize="16dip"
        android:paddingTop="8dip"
        android:clickable="true"
        android:paddingBottom="8dip"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@drawable/register_btn_bg_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
